# toneget

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  requirements.txt  sync_workouts.py
.github/workflows/: release.yml
_archive/: README-with-desktop-app.md
desktop-app/: README.md  index.html  package-lock.json  package.json
desktop-app/src/: App.jsx  index.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: main.rs
