[package]
name = "toneget"
version = "2.0.0"
description = "Export your Tonal workout data"
authors = ["ToneGet Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/curlrequests/toneget"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-close", "dialog-save", "fs-write-file", "http-request"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
